# Python-Fanatec-FFB

./: 1_fanatec_ffb_with_get_values.py  2_fanatec_drive_wheel_pid.py  3_fanatec_drive_with_MPC.py  4_fanatect_effect.py  README.md  carla_manual_control_fanatec_wheel.py  lib_fanatec_controller_with_mpc.py  lib_fanatec_controller_with_pid.py  pyproject.toml
experimental/: carla_manual_control_fanatec_mpc_autopilot.py
