[project]
name = "fanatec-python-driver"
version = "0.1.0"
description = ""
authors = [
    {name = "doddsy2018",email = "email@email.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "hidapi (>=0.15.0,<0.16.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "keyboard (>=0.13.5,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
